--- a/rev-manifest.json
+++ b/rev-manifest.json
@@ -5,6 +5,7 @@
   "images/hero_image-min.jpg": "images/hero_image-min-c8414af505.jpg",
   "images/rsz_phone-mockup-02.jpg": "images/rsz_phone-mockup-02-85b687ee24.jpg",
   "images/rsz_phone-mockup.jpg": "images/rsz_phone-mockup-e55d3650e7.jpg",
-  "javascripts/app.js": "javascripts/app-e16235600deaf8af54c7.js",
-  "stylesheets/app.css": "stylesheets/app-8fd8f95c6c.css"
+  "images/vegmap.jpg": "images/vegmap-18165667a1.jpg",
+  "javascripts/app.js": "javascripts/app-5ccee9dab7c431a9f79c.js",
+  "stylesheets/app.css": "stylesheets/app-8f31a0fc75.css"
 }
