--- a/projects/selene-architecture/rev-manifest.json
+++ b/projects/selene-architecture/rev-manifest.json
@@ -4,11 +4,11 @@
   "images/client-1.png": "images/client-1-bc4e31b8ca.png",
   "images/cuilding.png": "images/cuilding-7560111c5d.png",
   "images/form__photo.jpg": "images/form__photo-47fccdae8f.jpg",
-  "images/logos/Logo-5.jpg": "images/logos/Logo-5-7976b38bdb.jpg",
   "images/logos/logo-1.png": "images/logos/logo-1-7f576c0b95.png",
   "images/logos/logo-2.jpg": "images/logos/logo-2-f5f534aabe.jpg",
   "images/logos/logo-3.png": "images/logos/logo-3-fd7f8c0e0c.png",
   "images/logos/logo-4.jpg": "images/logos/logo-4-1dfbd6f4eb.jpg",
+  "images/logos/logo-5.jpg": "images/logos/logo-5-7976b38bdb.jpg",
   "images/logos/logo-6.jpg": "images/logos/logo-6-21d2670538.jpg",
   "images/motto-1.jpg": "images/motto-1-44c43c4133.jpg",
   "images/motto-2.jpg": "images/motto-2-5d1d77f27f.jpg",
@@ -22,5 +22,5 @@
   "images/stairs2.jpg": "images/stairs2-51c6ed21a5.jpg",
   "images/stairs3.jpg": "images/stairs3-127eb04afe.jpg",
   "javascripts/app.js": "javascripts/app-08f8d4179e273a33f57a.js",
-  "stylesheets/app.css": "stylesheets/app-ca4e4ca5da.css"
+  "stylesheets/app.css": "stylesheets/app-d2758feb61.css"
 }
